--- a/static/css/my_styles.css
+++ b/static/css/my_styles.css
@@ -129,6 +129,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 .examples {
   font-size: 0.8rem;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
@@ -142,3 +143,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
     width: 100%;
   }
 }
+/* 
+@media (max-width: 768px) {
+  .examples {
+    width: 100% !important;
+  }
+} */
